[gd_scene load_steps=4 format=3 uid="uid://bgb76qqgse8r0"]

[ext_resource type="Script" path="res://components/trial/trial.gd" id="1_o1t1m"]
[ext_resource type="PackedScene" uid="uid://dfuvb36atlv5l" path="res://components/trial/trial_setup.tscn" id="2_ra5vj"]
[ext_resource type="PackedScene" uid="uid://ckqnh60a5tsjb" path="res://components/trial/object_layout.tscn" id="3_r21qd"]

[node name="Trial" type="Node"]
script = ExtResource("1_o1t1m")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ResponseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ConfidenceTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TrialSetup" parent="." instance=ExtResource("2_ra5vj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32792, -0.972863, 2.22916)
metadata/_edit_group_ = true

[node name="ObjectLayout" parent="." instance=ExtResource("3_r21qd")]
visible = false
metadata/_edit_group_ = true

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ResponseTimer" to="." method="_on_response_timer_timeout"]
[connection signal="timeout" from="ConfidenceTimer" to="." method="_on_confidence_timer_timeout"]

[editable path="TrialSetup"]
[editable path="ObjectLayout"]
